--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "joiform.js",
   "scripts": {
     "sampleserver": "node examples/index",
-    "test": "jest --watch"
+    "test": "jest --watchAll --coverage"
   },
   "dependencies": {
     "forms": "^1.3.0",
